# BottomFlow

./: CMakeLists.txt  LICENSE  README.md  app.py  aux.cpp  main.cpp  registro.csv  registro_CPUInfo.csv  utilities.cpp  utilities.hpp
InfoAcquisition/: CMakeLists.txt  infoAcquisition.cpp  infoAcquisition.hpp
Visualization/: CMakeLists.txt  visualization.cpp  visualization.hpp
Vizualization/: CMakeLists.txt
indicators/: CMakeLists.txt
